cmake_minimum_required(VERSION 3.9)
project(chapter7)

set(CMAKE_CXX_STANDARD 11)

add_executable(exercise1 exercise1/exercise1.cpp)
add_executable(exercise2 exercise2/exercise2.cpp)
add_executable(exercise3 exercise3/exercise3.cpp)
add_executable(exercise4 exercise4/exercise4.cpp)
add_executable(exercise5 exercise5/exercise5.cpp)